<resources>
    <string name="app_name">苏州市物流寄递业实名制登记系统客户端</string>
    <string name="app_name2">苏州市物流寄递业\n实名制登记系统客户端</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="bluetooth_settings">蓝牙设置</string>
    <string name="title_activity_login">登录</string>
    <string name="package_detail">物流详情</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名/手机号</string>
    <string name="prompt_password">请输入6-16位密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">请输入正确的手机号</string>
    <string name="error_invalid_password">请输入6-16位密码</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">请输入用户名/手机号</string>
    <string name="setting">设置</string>
    <string name="realname">实名制采集内容</string>
    <string name="senddata">数据发送</string>
    <string name="yewu">业务信息</string>
    <string name="about_us">关于我们</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="dialogTitle">选择读卡方式</string>
</resources>
